// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavLink> changes the class name when actived 1`] = `
<a
  className="a Link-lydjp6-0 ieobzK"
  href="/a"
  onClick={[Function]}
>
  alo
</a>
`;

exports[`<NavLink> should render correctly 1`] = `
<a
  className="Link-lydjp6-0 ieobzK"
  href="/a"
  onClick={[Function]}
>
  alo
</a>
`;
